# Chronicle

./: .gitignore  Cargo.toml  Makefile  README.md
Chronicle.xcworkspace/: contents.xcworkspacedata
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: collectors_bench.rs  packer_bench.rs  ring_buffer_bench.rs  search_bench.rs  storage_bench.rs
benchmarks/src/: config.rs  lib.rs  metrics.rs
benchmarks/src/benches/: collectors_bench.rs  mod.rs  packer_bench.rs  ring_buffer_bench.rs  search_bench.rs  storage_bench.rs
benchmarks/src/monitoring/: memory_analyzer.rs  mod.rs  performance_profiler.rs  resource_tracker.rs  system_monitor.rs
benchmarks/src/utils/: mod.rs
cli/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
cli/examples/: basic_usage.rs  search_examples.rs
cli/src/: api.rs  error.rs  lib.rs  main.rs  output.rs  search.rs  secure_auth.rs  utils.rs
cli/src/commands/: backup.rs  config.rs  export.rs  mod.rs  replay.rs  search.rs  status.rs  wipe.rs
cli/tests/: backup_tests.rs  integration_tests.rs
collectors/: README.md
collectors/ChronicleCollectors/: ChronicleCollectors.entitlements  ChronicleCollectors.h  Info.plist
collectors/ChronicleCollectors.xcodeproj/: project.pbxproj
collectors/ChronicleCollectors/Sources/: AudioMonCollector.swift  ChronicleCollectors.swift  ClipMonCollector.swift  DriveMonCollector.swift  FSMonCollector.swift  KeyTapCollector.swift  NetMonCollector.swift  PointerMonCollector.swift  ScreenTapCollector.swift  WindowMonCollector.swift
collectors/ChronicleCollectors/Support/: CollectorBase.swift  ConfigManager.swift  EventTypes.swift  PermissionManager.swift  PlatformAbstraction.swift  RingBufferWriter.swift
collectors/ChronicleCollectors/Tests/: ChronicleCollectorsTests.swift  DriveMonCollectorTests.swift
collectors/Examples/: BasicUsage.swift
config/: chronicle.toml.example
docs/: BACKUP_GUIDE.md
packer/: Cargo.toml  Cargo_simple.toml  README.md
packer/benches/: packer_benchmarks.rs
packer/examples/: basic_usage.rs  encryption_demo.rs  storage_demo.rs
packer/src/: advanced_crypto.rs  auth.rs  auto_backup.rs  cloud_backup.rs  config.rs  dynamic_config.rs  encryption.rs  error.rs  event_bus.rs  flexible_config.rs  input_validation.rs  integrity.rs  key_management.rs  lib.rs  main.rs  metrics.rs  packer.rs  schema.rs  schema_versioning.rs  secure_api.rs  security_monitoring.rs  storage.rs  storage_strategy.rs  tls.rs
packer/tests/: auto_backup_tests.rs  cloud_backup_tests.rs  integration_tests.rs
ring-buffer/: Makefile  bench_ring_buffer.c  distributed_buffer.h  ring_buffer.c  ring_buffer.h  test_ring_buffer.c
scripts/: README.md  chronicle.sh
scripts/ci/: docker_build.sh  github_actions.sh  gitlab_ci.sh  jenkins.sh
scripts/common/: config.sh  utils.sh
scripts/dev/: build.sh  clean.sh  format.sh  setup.sh  test.sh
scripts/install/: install_local.sh  install_system.sh  uninstall.sh  update.sh
scripts/package/: create_dmg.sh  create_pkg.sh  create_zip.sh  upload_release.sh  validate_package.sh
scripts/test/: run_all_tests.sh  run_ci_tests.sh  run_integration_tests.sh  run_performance_tests.sh  run_unit_tests.sh
tests/: Cargo.toml  Cargo_minimal.toml  IMPLEMENTATION_SUMMARY.md  README.md  ci_tests.sh  lib.rs  real_integration_tests.rs  run_tests.sh  simple_config_tests.rs  simple_integration_tests.rs  simple_performance_tests.rs  simple_security_tests.rs
tests/integration/: mod.rs  test_backup_integration.rs  test_full_pipeline.rs  test_ring_buffer_integration.rs
tests/mocks/: mock_collectors.rs  mock_packer.rs  mock_ring_buffer.rs  mod.rs  test_data_generator.rs
tests/performance/: benchmark_collectors.rs  benchmark_ring_buffer.rs  mod.rs
tests/swift/: ChronicleCollectorsTests.swift
tests/utils/: data_validation.rs  mod.rs  performance_utils.rs  system_utils.rs  test_harness.rs
ui/: ChronicleUI.entitlements  Info.plist
ui/ChronicleUI.xcodeproj/: project.pbxproj
ui/Sources/: BackupView.swift  ChronicleUIApp.swift  MenuBarView.swift  PermissionView.swift  SearchView.swift  SettingsView.swift  StatusView.swift
ui/Support/: APIClient.swift  AppState.swift  Notifications.swift  PermissionStatus.swift  StatusIndicator.swift
ui/Views/Components/: CollectorToggle.swift  StatusIndicatorComponent.swift
ui/Views/Modals/: AlertModal.swift  ConfirmationModal.swift
ui/Views/Preferences/: AdvancedPreferences.swift  CollectorPreferences.swift  GeneralPreferences.swift
