[package]
name = "chronictl"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Chronicle data collection and analysis"
authors = ["Chronicle Team"]
license = "MIT"
repository = "https://github.com/your-org/chronicle"
homepage = "https://github.com/your-org/chronicle"
readme = "README.md"

[[bin]]
name = "chronictl"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive", "env", "color"] }
clap_complete = "4.0"

# Async runtime - Use workspace version
tokio = { workspace = true }

# Data processing - Use workspace versions
arrow = { workspace = true }
parquet = { workspace = true }

# Serialization - Use workspace versions
serde = { workspace = true }
serde_json = { workspace = true }
csv = "1.1"

# Terminal UI
ratatui = "0.26"
crossterm = "0.27"
indicatif = "0.17"
console = "0.15"

# Network
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls", "cookies"] }

# Security
jsonwebtoken = "9.3"
ring = "0.17"
rand = "0.8"
base64 = "0.22"
rcgen = "0.12"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.1"

# Date/time - Use workspace version
chrono = { workspace = true }

# Configuration - Use workspace version
config = { workspace = true }
dirs = "5.0"
toml = "0.8"
serde_yaml = "0.9"

# Error handling - Use workspace versions
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Regular expressions
regex = "1.0"

# File system operations
walkdir = "2.0"

# Password input
rpassword = "7.0"

# Shell completion
# clap_complete already defined above

# Secure operations
zeroize = "1.0"

# Compression
flate2 = "1.0"

# Hashing
blake3 = "1.0"

# System information - Use workspace version
sysinfo = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["colors"]
colors = ["console/ansi-parsing"]