[package]
name = "chronictl"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Chronicle data collection and analysis"
authors = ["Chronicle Team"]
license = "MIT"
repository = "https://github.com/your-org/chronicle"
homepage = "https://github.com/your-org/chronicle"
readme = "README.md"

[[bin]]
name = "chronictl"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { workspace = true }
clap_complete = "4.4.9"

# Async runtime - Use workspace version
tokio = { workspace = true }

# Data processing - Use workspace versions
# arrow = { workspace = true } # Disabled for compatibility testing 
# parquet = { workspace = true }

# Serialization - Use workspace versions
serde = { workspace = true }
serde_json = { workspace = true }
csv = "1.1"

# Terminal UI
ratatui = "0.26"
crossterm = "0.27"
indicatif = "0.17"
console = "0.15"

# Network
reqwest = { version = "0.11.24", features = ["json", "stream", "rustls-tls", "cookies"] }

# Security - Use workspace versions
jsonwebtoken = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
rcgen = "0.10.0"
rustls = "0.21.12"
tokio-rustls = "0.24.1"
rustls-pemfile = "1.0.4"

# Date/time - Use workspace version
chrono = { workspace = true }

# Configuration - Use workspace version
config = { workspace = true }
dirs = "5.0"
toml = "0.8"
serde_yaml = "0.9"

# Error handling - Use workspace versions
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Regular expressions
regex = "1.0"

# File system operations
walkdir = "2.0"

# Password input
rpassword = "7.0"

# Shell completion
# clap_complete already defined above

# Secure operations
zeroize = "1.0"

# Compression
flate2 = "1.0"

# Hashing
blake3 = "1.0"

# System information - Use workspace version
sysinfo = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }

[features]
default = ["colors"]
colors = ["console/ansi-parsing"]