[package]
name = "chronicle-tests"
version = "0.1.0"
edition = "2021"
authors = ["Chronicle Team"]
description = "Comprehensive test suite for Chronicle project"
license = "MIT"

[lib]
name = "chronicle_tests"
path = "lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.25", features = ["full", "test-util"] }
futures = "0.3"

# Testing frameworks
criterion = { version = "0.4", features = ["html_reports"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system and temp files
tempfile = "3.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Memory mapping
memmap2 = "0.9"

# Checksums and hashing
sha2 = "0.10"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Base64 encoding
base64 = "0.21"

# Compression
flate2 = "1.0"

# Random number generation
rand = "0.8"

# Regular expressions
regex = "1.0"

# CPU detection
num_cpus = "1.13"

# Test utilities
once_cell = "1.17"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[features]
default = []