[package]
name = "chronicle-tests"
version = "0.1.0"
edition = "2021"
authors = ["Chronicle Team"]
description = "Comprehensive test suite for Chronicle project"
license = "MIT"

[lib]
name = "chronicle_tests"
path = "lib.rs"

[dependencies]
# Use workspace dependencies for consistency
tokio = { workspace = true }
futures = { workspace = true }

# Testing frameworks
criterion = { workspace = true, features = ["html_reports"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# File system and temp files
tempfile = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time handling
chrono = { workspace = true }

# Memory mapping
memmap2 = "0.9.0"

# Checksums and hashing
sha2 = { workspace = true }
blake3 = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# Compression
flate2 = { workspace = true }

# Random number generation
rand = { workspace = true }

# Regular expressions
regex = "1.10.2"

# CPU detection
num_cpus = "1.16.0"

# Test utilities
once_cell = "1.19.0"

# Additional dependencies for real integration tests
hex = "0.4.3"

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[features]
default = []